댓글 기능 추가

--- a/_posts/study/algorithm/2023-05-12-test.md
+++ b/_posts/study/algorithm/2023-05-12-test.md
@@ -2,6 +2,11 @@
 layout: post
 title: "테스트"
 subtitle: "시간복잡도"
-category: devlog
-tags: algorithm
+category: study
+tags: algorithm 시간복잡도 123 태그1 태그2
 ---
+
+
+테스트를 위한 글입니다
+
+태그 확인
