--- a/_posts/PE/2023-07-23-프롬프트엔지니어링2.md
+++ b/_posts/PE/2023-07-23-프롬프트엔지니어링2.md
@@ -5,85 +5,17 @@ subtitle: "이건어디에들어가는거지"
 category: PE
 tags: 프롬프트엔지니어 PE
 comments: true
-about: true
 ---
 
 
 
 
-# About Prompt Engineering #1
-
-## 소개
-ChatGPT, 구글의 바드 등 생성형 AI의 등장으로 하루가 다르게 변해가고 있습니다. 이런 환경에서 경쟁 우위를 지니기 위해서는 빠른 대응이 필수적으로 요구되는데요, 변화를 위기보다는 기회로 여기고 변화에 맞춰 신속하고 적절하게 반응하는 것이 중요합니다. 따라서 생성형AI를 통해 경쟁 우위를 가지는 방법중 하나인 ‘프롬프트 엔지니어링’을 소개하고자 합니다.
-
-프롬프트 엔지니어링은 다양한 응용 프로그램 및 연구 주제에 대해 언어 모델(LM)을 효율적으로 사용하기 위한 프롬프트를 개발하고 최적화하기 위한 비교적 새로운 분야입니다. 프롬프트 엔지니어링 기술은 대형언어모델(LLM : Large Language Models)의 기능과 한계를 이해하는데 도움을 줄 수 있습니다.
-
-연구원 들은 질문 답변 및 산술 추론과 같은 광범위하고 복잡한 작업에서 LLM의 용량을 향상시키기 위해 프롬프트 엔지니어링을 사용합니다. 개발자는 프롬프트 엔지니어링을 사용하여 LLM 및 기타 도구와 상호 작용하는 강력하고 효과적인 프롬프트 기술을 설계합니다.
-
-프롬프트 엔지니어링은 단순히 프롬프트를 설계하고 개발하는 것이 아닙니다. LLM과 상호 작용하고 개발하는 데 유용한 광범위한 기술과 기술을 포함합니다.이것은 LLM의 기능을 연결하고, 구축하고, 이해하는 중요한 기술입니다. 프롬프트 엔지니어링을 사용하여 LLM의 안전성을 개선하고 도메인 지식 및 외부 도구를 사용하여 LLM을 보강하는 것과 같은 새로운 기능을 구축할 수 있습니다.
-
-## 프롬프트와 프롬프트 엔지니어링
-
-AI는 동일한 질문에 정해진 답변을 하는 것이 아닌 학습한 데이터를 기반으로 매번 새로운 답변을 내놓습니다. 내가 원하는 구조의 답변을 얻는데 성공했어도, 동일한 프롬프트를 몇 번 더 입력해 보면 다른 형태의 답변을 주는 경우가 발생하기도 하죠.
-
-따라서 매번 원하는 구조로 답변을 얻어낼 수 있을 때까지 프롬프트를 수정하는 과정이 필요합니다. 특정 분야에서 특별하게 역할을 잘하는 AI가 있다고 가정했을 때, 해당 AI가 최상의 답을 할 수 있도록 훈련 시키고 AI로부터 최상의 답을 이끌어 내는 일을 하는 사람이 바로 ‘프롬프트 엔지니어’입니다.
-
-프롬프트 엔지니어에 대한 수요가 증가하는 이유는 다양한 영역에서 ChatGPT와 같은 생성형 AI를 활용한 서비스를 도입하고 있기 때문입니다. ChatGPT 뿐만 아니라 마이크로 소프트의 Bing 챗이나 구글의 Bard와 같은 text-to-text 서비스나 Stable Diffusion, DALL-E, Midjourneyc처럼 text-to-image 서비스를 이용해 결과물을 출력하는 것 모두 프롬프트 엔지니어링이라고 할 수 있습니다.
-
-완전한 서비스를 만들기 위해서, 그리고 서비스 구축에 필요한 API 사용 비용 절감을 위해서라도 좋은 프롬프트 개발은 필수입니다. 하지만 AI가 좋은 답변을 도출하도록 하는 데에는 100% 정답이 없기 때문에, 산업에서는 이를 전문적으로 연구하고 다양한 노하우를 습득한 프롬프트 엔지니어의 전문 역량이 더욱 필요해지고 있습니다.
-
-### 프롬프트란
-
-최근 생성형 AI 모델이 발전하고 이를 활용한 서비스가 등장하면서 컴퓨터는 기존의 명령어가 아닌 자연어, 즉 인간의 언어 그대로를 입력받을 수 있게 되었습니다. 컴퓨터가 인간의 언어를 그대로 이해하고 명령을 수행하기 때문에 사용자는 기존 시스템보다 훨씬 자유롭고 다양한 결과물을 바랄 수 있게 되었죠. 이처럼 생성형 AI에게 어떤 행동을 해야 하는지 자연어로 설명해 원하는 결과물을 출력할 수 있게 하는 입력값을 프롬프트(Prompt)라고 합니다.
-
-프롬프트는 AI를 작동시키기 위해 사용자가 언어 모델에 입력하는 모든 것이라고 할 수 있습니다. 예를 들어 명령, 지시, 질문, 요청 등을 모두 포함하는 것이죠. 프롬프트를 구성하기 위해 반드시 필요한 특정 요소가 정해져 있는 것은 아닙니다. 따라서 프롬프트의 구성을 만들어 가는 것을 프롬프트 엔지니어링이라고 할 수 있습니다. 현재는 프롬프트 입력 수준에 따라 결과물의 수준도 천차만별로 달라, 이를 통해 결국 AI 서비스 품질을 판단하게 됩니다.
-
-### 프롬프트 엔지니어링이란
-
-프롬프트 엔지니어링이란 인공지능 분야의 한 개념으로 AI로부터 높은 수준의 결과물을 얻기 위해 적절한 프롬프트를 구성하는 작업입니다. 데이터에서 필요한 정보를 찾는 과정과 콘텐츠 구성 능력이 인공지능 분야에서 중요해짐에 따라 자연어로 인공지능의 역량을 최대로 끌어내는 것이 프롬프트 엔지니어링의 핵심이라고 볼 수 있습니다.
-
-생성형 AI는 대량의 데이터를 학습하여 서비스로 제공됩니다. 즉 인류가 만들어낸 다방면의 지식을 저장하고 있는 것이죠. 따라서 AI가 학습한 수많은 데이터와 지식 중에서 우리가 원하는 결과를 정확하게 이끌어 내는 것이 중요합니다. 그렇다면, 어떻게 정확하고 높은 수준의 결과를 이끌어 낼 수 있을까요?
-
-예를 들어 어떤 사람에게 명령을 내린다고 생각해 보겠습니다. 명령을 받은 대상이 가진 역량을 최대로 끌어냄과 동시에 원하는 결과물을 얻기 위해서는 우리가 지시하는 명령이 섬세하고 정확해야 할 것입니다. 특히 통상적으로 인간이 가지고 있는 지식보다 방대한 양의 데이터를 학습한 생성형 AI는 자율적인 판단없이 지시한대로 결과물을 출력하기 때문에 프롬프트를 개발할 때 정교한 구성을 요구합니다.
-
-따라서 서비스의 기반이 되는 AI 모델의 성능을 최대한 끌어올리고 원하는 결과물을 만들기 위해서는 프롬프트를 잘 만들어주는 것이 필요합니다. 생성형 AI는 완벽하게 인간의 의도와 목적을 파악하고 반영할 수 있는 것은 아니며, 때로는 부적절하거나 오류가 있는 결과물을 생성하기 때문에 인간의 감성이나 창의성을 완전히 대체할 수는 없습니다. 결국 생성형 AI를 효과적으로 활용하기 위해서는 인간의 감독과 조정이 필요합니다. 이러한 업무, 즉 프롬프트를 탐색하고 설계하여 개발하는 것이 프롬프트 엔지니어링이라 할 수 있습니다.
-
-쉽게말해 프롬프트는 언어 모델(LM)에 들어가는 텍스트이고, 프롬프트 엔지니어링은 원하는 출력을 도출하기 위해 텍스트를 설계하는 기술이라고 할 수 있겠습니다.
-
-## 기초 프롬프트
-
-우리는 간단한 프롬프트를 통해 많은 것을 얻을 수 있지만 그에 따른 결과의 품질은 제공하는 정보의 양과 잘 만들어진 정보의 양에 따라 달라집니다.
-
-프롬프트에는 모델에 전달하는 지침이나 질문과 같은 정보가 포함될 수 있으며 컨텍스트, 입력 또는 예제와 같은 기타 세부 정보가 포함될 수 있죠 (A prompt can contain information like the instruction or question you are passing to the model and include other details such as context , inputs , or examples.)
-
-위와 같은 요소를 이용하여 더 잘 지시하고 더 나은 결과를 얻을 수 있는데, 간단한 프롬프트의 기본 예를 살펴봅시다.
-
-![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled.png)
-
-보시다시피, 언어 모델은 문맥이 주어졌을 때 의미가 있는 문자열의 연속을 출력합니다 `"하늘은"` 에 대한 출력이 예기치 않거나 수행하려는 작업과 거리가 있을 수 있죠.
-
-좀 더 개선해봅시다
-
-![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled%201.png)
-
-결과가 훨씬 더 좋게 보입니다.
-모델이 지시한대로 잘 수행했으니까요. 모델에게 문장을 완성하라고 한 지시에 따른 것 뿐입니다.
-모델에게 작업을 수행하도록 지시하기 위해 최적의 프롬프트를 설계하는 이러한 접근 방식을 **프롬프트 엔지니어링**이라고 합니다.
-또한 이 예제에서 구체적으로 무엇을 달성하고자 하는지에 대해 더 많은 컨텍스트 또는 지침을 제공해야 할 필요성을 알 수 있겠습니다.
+# About Prompt Engineering #2
 
 
-
-
-reference
-
-<!-- [https://www.codestates.com/blog/content/프롬프트-프롬프트엔지니어링](https://www.codestates.com/blog/content/%ED%94%84%EB%A1%AC%ED%94%84%ED%8A%B8-%ED%94%84%EB%A1%AC%ED%94%84%ED%8A%B8%EC%97%94%EC%A7%80%EB%8B%88%EC%96%B4%EB%A7%81) -->
-[https://www.promptingguide.ai/](https://www.promptingguide.ai/)
-
-
-<!-- 
 ## 프롬프팅 방식
 
-위에서 매우 간단한 프롬프트를 시도했습니다. 표준 프롬프트의 형식은 다음과 같습니다.
+앞서 매우 간단한 프롬프트를 시도했습니다. 표준 프롬프트의 형식은 다음과 같습니다.
 
 ```
 <Question>?
@@ -147,10 +79,19 @@ Negative
 ```
 
 퓨샷 프롬프트는 문맥 내 학습을 가능하게 하며, 이는 몇 가지 시연에서 주어진 작업을 학습하는 언어 모델의 능력입니다.
-
 이해가 안가도 괜찮습니다 다음에 더 자세히 알아볼 예정입니다.
 
-2
+
+
+
+reference
+
+
+[https://www.promptingguide.ai/](https://www.promptingguide.ai/)
+
+
+
+<!-- 
 
 ## 프롬프트의 요소
 
