--- a/_posts/PE/2023-07-23-프롬프트엔지니어링2.md
+++ b/_posts/PE/2023-07-23-프롬프트엔지니어링2.md
@@ -82,10 +82,10 @@ Negative
 
 
 
-reference
+## reference
 
 
-[https://www.promptingguide.ai/](https://www.promptingguide.ai/)
+* [https://www.promptingguide.ai/](https://www.promptingguide.ai/)
 
 
 
