related-post 추가

--- a/_posts/PE/2023-07-23-프롬프트엔지니어링2.md
+++ b/_posts/PE/2023-07-23-프롬프트엔지니어링2.md
@@ -1,10 +1,13 @@
 ---
-layout: tag-list
+layout: post
 title: "What is Prompt Engineering?"
 subtitle: "이건어디에들어가는거지"
 category: PE
 tags: 프롬프트엔지니어 PE
 comments: true
+related_posts:
+    - /_posts/PE/2023-07-23-프롬프트엔지니어링.md
+    - http://127.0.0.1:4000/pe/2023-07-23-%ED%94%84%EB%A1%AC%ED%94%84%ED%8A%B8%EC%97%94%EC%A7%80%EB%8B%88%EC%96%B4%EB%A7%812/
 ---
 
 
