--- a/_posts/PE/2023-07-23-프롬프트엔지니어링.md
+++ b/_posts/PE/2023-07-23-프롬프트엔지니어링.md
@@ -10,7 +10,7 @@ comments: true
 
 
 
-# About Prompt Engineering : 소개
+# About Prompt Engineering : 1.소개
 
 ## 소개
 ChatGPT, 구글의 바드 등 생성형 AI의 등장으로 하루가 다르게 변해가고 있습니다. 이런 환경에서 경쟁 우위를 지니기 위해서는 빠른 대응이 필수적으로 요구되는데요, 변화를 위기보다는 기회로 여기고 변화에 맞춰 신속하고 적절하게 반응하는 것이 중요합니다. 따라서 생성형AI를 통해 경쟁 우위를 가지는 방법중 하나인 ‘프롬프트 엔지니어링’을 소개하고자 합니다.
@@ -51,7 +51,7 @@ ChatGPT 뿐만 아니라 마이크로 소프트의 Bing 챗이나 구글의 Bard
 
 
 
-
+예제가 별루인것같기도 하구...
 
 
 
