--- a/_posts/PE/2023-07-26-프롬프트엔지니어링3.md
+++ b/_posts/PE/2023-07-26-프롬프트엔지니어링3.md
@@ -7,89 +7,7 @@ tags: 프롬프트엔지니어 PE
 comments: true
 ---
 
-
-# About Prompt Engineering : 2.프롬프트 방식
-
-
-## 프롬프팅 방식
-
-앞서 매우 간단한 프롬프트를 시도했습니다. 표준 프롬프트의 형식은 다음과 같습니다.
-
-```
-<Question>?
-```
-
-또는
-
-```
-<Instruction>?
-```
-
-다음과 같이 많은 QA 데이터셋에서 표준으로 사용되는 QA(Question Answering) 형식으로 이를 포맷할 수 있습니다.
-
-```
-Q: <Question>?
-A:
-```
-
-위와 같은 프롬프트를 표시할 때 **제로샷 프롬프트**라고도 합니다. 즉, 모델이 달성하고자 하는 작업에 대한 예제나 데모 없이 직접 응답을 요청하는 것입니다.일부 대형 언어 모델은 제로샷 프롬프트를 수행할 수 있는 기능이 있지만, 이는 당면한 작업의 복잡성과 지식에 따라 다릅니다.
-
-위의 표준 형식을 고려할 때, 인기 있고 효과적인 프롬프트 기술을 **퓨샷 프롬프트**라고 합니다. 여기서 예제(즉, 데모)를 제공합니다. 다음과 같이 퓨샷 프롬프트 형식을 지정할 수 있습니다.
-
-```
-<Question>?
-<Answer>
-<Question>?
-<Answer>
-<Question>?
-<Answer>
-<Question>?
-```
-
-QA 형식 버전은 다음과 같습니다.
-
-```
-Q: <Question>?
-A: <Answer>
-Q: <Question>?
-A: <Answer>
-Q: <Question>?
-A: <Answer>
-Q: <Question>?
-A:
-```
-
-QA 형식을 사용할 필요는 없습니다. 프롬프트 형식은 현재 작업에 따라 다릅니다. 예를 들어 간단한 분류 작업을 수행하고 하는 프롬프트를 만들어 보겠습니다.
-
-프롬프트:
-
-```
-This is awesome! // Positive
-This is bad! // Negative
-Wow that movie was rad! // Positive
-What a horrible show! //
-```
-
-*출력:*
-
-```
-Negative
-```
-
-퓨샷 프롬프트는 문맥 내 학습을 가능하게 하며, 이는 몇 가지 시연에서 주어진 작업을 학습하는 언어 모델의 능력입니다.
-이해가 안가도 괜찮습니다 다음에 더 자세히 알아볼 예정입니다.
-
-
-
-
-## reference
-
-
-* [https://www.promptingguide.ai/](https://www.promptingguide.ai/)
-
-
-
-<!-- 
+# About Prompt Engineering : 3.프롬프트 설계
 
 ## 프롬프트의 요소
 
@@ -155,7 +73,6 @@ chatgpt의 토크나이저는 [이곳](https://platform.openai.com/tokenizer)에
 
 위에서 보시는 것과 같이 place라고 하는 곳의 특정 정보를 간단히 추출할 수 있었습니다.
 
-3
 
 ### **부정확성 방지**
 
@@ -201,7 +118,7 @@ chatgpt의 토크나이저는 [이곳](https://platform.openai.com/tokenizer)에
 
 ![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled%205.png)
 
-묻지 말라니까 바로 물어보는 3.5님 되시겠다.
+
 
 해야 할 것에 초점을 둔 프롬프트
 
@@ -213,21 +130,28 @@ chatgpt의 토크나이저는 [이곳](https://platform.openai.com/tokenizer)에
 
 오늘은 추천할 만한 동영상이 없다고 하는 경우도 있었다.
 
-사실 답변은 고객의 관심사를 묻는것에 대해 제한하도록 했기 때문에 
+사실, 답변은 고객의 관심사를 묻는것에 대해 제한하도록 했기 때문에 
 
 ```
 죄송합니다, 저는 당신의 관심사에 대한 정보가 없습니다.
 하지만, 여기 현재 세계적으로 인기 있는 영화 목록이 있습니다
-~~~
+블라블라 ~~~
 ```
 
 위와 같은 답변을 유도한 것이지만 생각만큼 잘 나오지는 못했다.(ㅠㅠ)
 
-reference
 
-[https://www.promptingguide.ai/introduction/tips](https://www.promptingguide.ai/introduction/tips)
 
-4
+## reference
+
+
+* [https://www.promptingguide.ai/](https://www.promptingguide.ai/)
+
+
+
+<!-- 
+
+
 
 ## 프롬프트의 예시
 
