--- a/_posts/PE/2023-07-26-프롬프트엔지니어링3.md
+++ b/_posts/PE/2023-07-26-프롬프트엔지니어링3.md
@@ -76,7 +76,7 @@ chatgpt의 토크나이저는 [이곳](https://platform.openai.com/tokenizer)에
 
 ### **부정확성 방지**
 
-세부적이고 형식을 개선하는 것에 대한 위의 팁을 고려할 때, 프롬프트에 대해 너무 영리하고 잠재적으로 부정확한 설명을 만드는 함정에 빠지기 쉽습니다. 때로는 구체적이고 직접적인 것이 좋습니다.여기서 유추하는 것은 효과적인 의사소통과 매우 유사합니다. 더 직접적일수록, 더 효과적으로 메시지를 전달합니다.
+프롬프트를 생성할 때 구체적이고 직접적으로 작성하는 것이 좋습니다. 효과적인 의사소통과 매우 유사하기 때문인데요, 더 직접적일수록, 너무 서술적이지 않게 할 수록 효과적으로 메시지를 전달합니다.
 
 예를 들어보겠습니다. 
 
@@ -108,11 +108,11 @@ chatgpt의 토크나이저는 [이곳](https://platform.openai.com/tokenizer)에
 
 ### To do? or not to do?
 
-프롬프트를 디자인할 때 자주 사용하는 또 다른 팁은 하지 말아야 할 것을 말하지 말고 대신 해야 할 것을 말하는 것입니다. 이를 통해 보다 구체적인 정보를 얻을 수 있으며 모델에서 좋은 반응을 이끌어내는 세부 정보에 초점을 맞출 수 있습니다.
+프롬프트를 디자인할 때 자주 사용하는 또 다른 팁은 **하지 말아야 할 것**을 말하지 말고 대신 **해야 할 것**을 말하는 것입니다. 이를 통해 보다 구체적인 정보를 얻을 수 있으며 모델에서 좋은 반응을 이끌어내는 세부 정보에 초점을 맞출 수 있습니다.
 
 여기 영화 추천 챗봇이 제가 하지 말아야 할 것에 초점을 맞춘 지침서를 작성했기 때문에 제가 원하지 않는 것에 정확히 실패한 예가 있습니다.
 
-**하지 말하야 할 것**에 초점을 맞춘 프롬프트와 **해야할 것**에 초점을 맞춘 프롬프트를 비교해 보겠습니다.
+하지 말하야 할 것에 초점을 맞춘 프롬프트와 해야할 것에 초점을 맞춘 프롬프트를 비교해 보겠습니다.
 
 하지 말아야 할 것에 초점을 둔 프롬프트
 
@@ -142,8 +142,11 @@ chatgpt의 토크나이저는 [이곳](https://platform.openai.com/tokenizer)에
 
 
 
-## reference
 
+
+
+
+## reference
 
 * [https://www.promptingguide.ai/](https://www.promptingguide.ai/)
 
