--- a/_posts/PE/2023-07-26-프롬프트엔지니어링4.md
+++ b/_posts/PE/2023-07-26-프롬프트엔지니어링4.md
@@ -7,162 +7,13 @@ tags: 프롬프트엔지니어 PE
 comments: true
 ---
 
-# About Prompt Engineering : 3.프롬프트 설계
-
-## 프롬프트의 요소
-
-프롬프팅을 계속 다루다보면 특정 요소가 프롬프트를 구성한다는 것을 알 수 있는데요, 요소들은 다음과 같습니다.
-
-**Instruction** - 모델이 수행할 특정 작업 또는 명령
-
-**Context** - 더 나은 반응을 위해 모델을 조정할 수 있는 외부 정보
-
-**Input Data** - 응답을 찾고자 하는 입력 또는 질문
-
-**Output Indicator** - 출력의 유형 또는 형식
-
-프롬프트에 네 가지 요소가 모두 필요한 것은 아니며 형식은 작업에 따라 다릅니다. 
-
-## 프롬프트를 설계하는 일반적인 방법들
-
-### 들어가기 전에
-
-언어를 통일하는 것은 가장 중요한 문제입니다. Chat gpt-4의 경우 한글 이해 능력이 이전 모델보다 월등히 상승하였습니다. 하지만 개선된 한국어 소통 결과에도, 여전히 Chat gpt-4는 한국어에 비해 영어의 정확도가 더 높습니다. 한국어로도 대화가 가능하지만 기본 언어인 영어로 질문한다면 명확한 소통이 가능합니다.
-
-영어가 능숙하지 않다면 [구글 번역](https://translate.google.co.kr/?hl=ko)이나 [파파고](https://papago.naver.com/)를 이용해 번역하여 질문할 수 있습니다.
-
-![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled%202.png)
-
-출처 : [Openai](https://openai.com/research/gpt-4)
-
-### 들어가며
-
-우리가 원하는 출력을 얻기 위해서는 많은 시행착오를 겪어야 합니다. 일반적으로 OpenAI의 [Playground](https://platform.openai.com/playground/p/default-grammar)를 이용하는것을 추천하긴 하나 모델의 특성을 크게 고려하지 않는다면, 전문가가 아니라면 무료버전을 사용하셔도 무방합니다. (Playground에 대해서는 나중에 다루겠습니다.)
-
-간단한 프롬프트 형식으로 시작해서 더 나은 출력을 받기 까지 앞서 말한 요소들을 추가하는 과정을 거칠 것입니다. 그렇기 때문에 프롬프트를 여러 방법으로 반복하는것이 매우 중요합니다. 
-
-또한 지시문이 길다고 무조건 좋은것은 아닙니다 간결하면서도, 구체적인 조건들이 더 나은 결과를 가져오는 경우를 쉽게 찾아 볼 수 있습니다.
-
-지금부터 프롬프트를 간단하게 설계 해보겠습니다.
-
-### The Instruction
-
-"쓰기", "분류", "요약", "번역", "명령" 등과 같이 모델에 원하는 작업을 지시하는 명령을 사용하여 다양한 단순 작업에 대한 효과적인 프롬프트를 설계할 수 있습니다.
-
-프롬프트의 시작 부분에 지시사항을 배치할 수 있습니다. 또 다른 권장 사항은 "##"과 같은 명확한 구분 기호를 사용하여 명령과 컨텍스트를 구분하는 것입니다.
-
-예를 들어:
-
-![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled%203.png)
-
-이렇게 말이죠.
-
-### 특수성
-
-모델이 수행할 지침과 작업에 대해 매우 구체적으로 설명합니다. 프롬프트가 더 설명적이고 상세할수록 결과는 더 좋습니다. 특히 원하는 답변이 있다면 더욱 중요합니다. 더 나은 결과로 이어지는 특정 토큰이나 키워드가 없습니다. 그렇기 때문에 좋은 형식과 설명적인 프롬프트를 갖는 것이 더 중요합니다. 실제로 프롬프트에 예제를 제공하면 원하는 출력을 특정 형식으로 얻을 수 있습니다.
-
-또한 프롬프트를 설계할 때 프롬프트의 길이에 제한을 두고 있기 때문에 토큰이라고 하 프롬프트의 길이도 염두에 두어야 합니다. `gpt-35-turbo`에 대한 토큰 제한은 4096 토큰으로 알려져 있습니다.(이는 입력과 출력이 모두 포함된 토큰입니다.)
-
-chatgpt의 토크나이저는 [이곳](https://platform.openai.com/tokenizer)에서 확인할 수 있습니다.
-
-다시 돌아와서, 텍스트에서 특정 정보를 추출하는 간단한 프롬프트를 시도해 보겠습니다.
-
-![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled%204.png)
-
-적당한 한국어로 된 글을 이용하고 싶었으나 마땅히 떠오르는게 없었습니다 ㅎㅎ;
-
-위에서 보시는 것과 같이 place라고 하는 곳의 특정 정보를 간단히 추출할 수 있었습니다.
-
-
-### **부정확성 방지**
-
-프롬프트를 생성할 때 구체적이고 직접적으로 작성하는 것이 좋습니다. 효과적인 의사소통과 매우 유사하기 때문인데요, 더 직접적일수록, 너무 서술적이지 않게 할 수록 효과적으로 메시지를 전달합니다.
-
-예를 들어보겠습니다. 
-
-‘프롬프트 엔지니어’ 에 대해 궁금하다면 어떻게 프롬프트를 작성하시나요?
-
-```
-프롬프트 엔지니어에 대해 설명해줘
-```
-
-위와 같이 작성을 하게 된다면 아까 말씀 드렸듯 부정확한 설명을 만들 수 있습니다. 
-
-그럼 다음과 같이 작성해볼까요
-
-```
-프롬프트 엔지니어에 대해 설명해줘 설명은 짧게 하고, 몇 문장만 하고, 너무 서술적으로 하지 마세요.
-```
-
-위의 프롬프트에서 몇 개의 문장을 사용해야 하는지, 어떤 스타일을 사용해야 하는지 명확하지 않습니다. 위의 프롬프트에서 여전히 좋은 반응을 얻을 수 있지만, 더 나은 프롬프트는 매우 구체적이고 간결하며 요점을 잘 설명하는 것입니다.
-
-이렇게 말이죠.
-
-```
-고등학생에게 프롬프트 엔지니어의 개념을 설명하기 위해 2-3개의 문장을 사용해주세요
-```
-
-이렇게 구체적이고 직접적으로 프롬프트를 만들어줌으로써 부정확성을 방지할 수 있겠습니다. 
-
-직접 테스트 해보시고 차이를 느껴보세요
-
-### To do? or not to do?
-
-프롬프트를 디자인할 때 자주 사용하는 또 다른 팁은 **하지 말아야 할 것**을 말하지 말고 대신 **해야 할 것**을 말하는 것입니다. 이를 통해 보다 구체적인 정보를 얻을 수 있으며 모델에서 좋은 반응을 이끌어내는 세부 정보에 초점을 맞출 수 있습니다.
-
-여기 영화 추천 챗봇이 제가 하지 말아야 할 것에 초점을 맞춘 지침서를 작성했기 때문에 제가 원하지 않는 것에 정확히 실패한 예가 있습니다.
-
-하지 말하야 할 것에 초점을 맞춘 프롬프트와 해야할 것에 초점을 맞춘 프롬프트를 비교해 보겠습니다.
-
-하지 말아야 할 것에 초점을 둔 프롬프트
-
-![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled%205.png)
-
-
-
-해야 할 것에 초점을 둔 프롬프트
-
-![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled%206.png)
-
-이 밖에도 여러 영화들을 추천해준다.
-
-![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled%207.png)
-
-오늘은 추천할 만한 동영상이 없다고 하는 경우도 있었다.
-
-사실, 답변은 고객의 관심사를 묻는것에 대해 제한하도록 했기 때문에 
-
-```
-죄송합니다, 저는 당신의 관심사에 대한 정보가 없습니다.
-하지만, 여기 현재 세계적으로 인기 있는 영화 목록이 있습니다
-블라블라 ~~~
-```
-
-위와 같은 답변을 유도한 것이지만 생각만큼 잘 나오지는 못했다.(ㅠㅠ)
-
-
-
-
-
-
-
-## reference
-
-* [https://www.promptingguide.ai/](https://www.promptingguide.ai/)
-* [https://mpost.io/prompt-engineering-ultimate-guide](https://mpost.io/prompt-engineering-ultimate-guide)
-
-
-<!-- 
-
-
-
-## 프롬프트의 예시
+# About Prompt Engineering : 4.프롬프트 예시
 
 이전 섹션에서는 LLM을 확인하는 방법에 대한 기본적인 예를 소개했습니다.
 
-이번 섹션에서는 프롬프트를 사용하여 다양한 작업을 수행하고 그 과정에서 주요 개념을 소개하는 방법에 대한 더 많은 예를 제공합니다. 아래의 몇 가지 예는 잘 만들어진 프롬프트를 사용하여 다양한 유형의 작업을 수행하는 방법을 보여줍니다.
+이번 섹션에서는 프롬프트를 사용하여 다양한 작%208업을 수행하고 그 과정에서 주요 개념을 소개하는 방법에 대한 더 많은 예를 제공합니다. 아래의 몇 가지 예는 잘 만들어진 프롬프트를 사용하여 다양한 유형의 작업을 수행하는 방법을 보여줍니다.
 
-### 텍스트 요약 (****Text Summarization****) 프롬프트
+### 텍스트 요약 (Text Summarization)
 
 자연어 생성의 표준 작업 중 하나는 텍스트 요약입니다. 말 그대로 긴 문서나 글을 짧게 요약하는 작업을 말합니다. 사실, 언어 모델의 가장 유망한 응용 프로그램 중 하나는 기사와 개념을 빠르고 읽기 쉬운 요약으로 요약할 수 있는 능력입니다. 프롬프트를 사용하여 기본 요약 작업을 시도해 보겠습니다.
 
@@ -264,7 +115,8 @@ Answer:
 Mice.
 ```
 
-위와 같이 한국어로도 프롬프트를 구성할 수 있습니다.
+
+한국어로도 프롬프트를 구성할 수 있습니다.
 
 ---
 
@@ -280,11 +132,13 @@ Mice.
 
 ![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled%209.png)
 
-완벽합니다! 제가 찾고 있던 특정 라벨입니다. 프롬프트에 제공된 예제는 모델의 출력을 구체화하는 데 도움이 된 것으로 보입니다.
+좋습니다. 제가 찾고 있던 특정 라벨입니다. 프롬프트에 제공된 예제는 모델의 출력을 구체화하는 데 도움이 된 것으로 보입니다.
 
 사실 모델은 `'중립'` 의 레이블에 있어서 약간의 편견을 가지고 있습니다.
 
-‘강한긍정’ 이나 ‘부정’이 없으면 거의 중립으로 분류되는 것을 테스트 해보시면 알 수 있습니다. 이런 넓은 범위의 중립을 더확실한 `'중립'` 의 레이블로 만들기 위해서 어떻게 수정하실 건가요? 라벨에 설명을 추가하거나 프롬프트에 예제를 더 추가할 수 있나요?
+‘강한긍정’ 이나 ‘부정’이 없으면 거의 중립으로 분류되는 것을 테스트 해보시면 알 수 있습니다. 
+
+이런 넓은 범위의 중립을 더확실한 `'중립'` 의 레이블로 만들기 위해서 어떻게 수정하실 건가요? 라벨에 설명을 추가하거나 프롬프트에 예제를 더 추가할 수 있나요?
 
 다음 섹션에서는 이것에 관련해서 몇가지 이야기를 할 예정입니다
 
@@ -344,7 +198,8 @@ AI:
 
 ### **코드 생성**
 
-생성형 ai의 꽃이라고 볼 수 있는 코드 생성입니다. 프롬프트를 통해 수행할 수 있는 코드 생성은 매우 많습니다. 
+생성형 ai의 꽃이라고 볼 수 있는 코드 생성입니다. 코드생성은 
+프롬프트를 통해 수행할 수 있는 코드 생성은 매우 많습니다. 
 
 먼저 사용자에게 인사하는 간단한 프로그램을 시도해 보겠습니다.
 
@@ -358,7 +213,7 @@ AI:
 
 *출력:*
 
-```
+```html
 <!DOCTYPE html>
 <html>
 <head>
@@ -408,54 +263,25 @@ WHERE d.DepartmentName = 'Computer Science';
 
 오늘날 LLM에게 가장 어려운 작업 중 하나는 어떤 형태로든 추론이 필요한 작업입니다. 추론은 LLM에서 나타날 수 있는 복잡한 응용 프로그램의 유형으로 인해 가장 흥미로운 분야 중 하나입니다.
 
-수학적 능력을 포함하는 작업에서 몇 가지 개선이 있었지만, 현재 LLM은 추론 작업을 수행하는 데 어려움을 겪기 때문에 이를 위해서는 훨씬 더 ‘진보’된 프롬프트 엔지니어링 기술이 필요합니다. 다음 가이드에서는 이러한 고급 기술에 대해 설명합니다. 지금은 산술 능력을 보여주기 위해 몇 가지 기본적인 예를 다룰 것입니다.
+수학적 능력을 포함하는 작업에서 몇 가지 개선이 있었지만, 현재 LLM은 추론 작업을 수행하는 데 어려움을 겪기 때문에 이를 위해서는 훨씬 더 ‘진보’된 프롬프트 엔지니어링 기술이 필요합니다. 그러한 고급 기술들은 다음 장에서 다룰 예정입니다.
 
-*프롬프트:*
+![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled%2010.png)
 
-```
-What is 9,000 * 9,000?
-```
+![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled%2011.png)
 
-*출력:*
+보시는 것처럼, 더 나은 지침과 예는 더 정확한 결과로 이어질 수 있습니다.  
 
-```
-81,000,000
-```
+향후 가이드에서는 더 복잡한 프롬프트 엔지니어링 원칙에 대해 이야기 해보겠습니다.
 
-좀 더 어려운 것을 시도해 보겠습니다.
+---
 
-*프롬프트:*
+## reference
 
-```
-The odd numbers in this group add up to an even number: 15, 32, 5, 13, 82, 7, 1. A:
-```
+- [https://mpost.io/prompt-engineering-ultimate-guide/](https://mpost.io/prompt-engineering-ultimate-guide/)
+- [https://www.promptingguide.ai/](https://www.promptingguide.ai/)
 
-출력:
 
-```
-No, the odd numbers in this group add up to an odd number: 119.
-```
-
-틀렸어요! 프롬프트를 개선하여 이를 개선하도록 노력하겠습니다.
-
-*프롬프트:*
-
-```
-The odd numbers in this group add up to an even number: 15, 32, 5, 13, 82, 7, 1. Solve by breaking the problem into steps. First, identify the odd numbers, add them, and indicate whether the result is odd or even.
-```
-
-*출력:*
-
-```
-Odd numbers: 15, 5, 13, 7, 1
-Sum: 41 41 is an odd number.
-```
-
-훨씬 낫죠?그런데, 저는 이것을 몇 번 시도해 보았는데, 가끔 시스템이 고장이 납니다.예제와 함께 더 나은 지침을 제공하면 더 정확한 결과를 얻는 데 도움이 될 수 있습니다.
-
-본 가이드의 이 섹션에서는 일반적인 응용 프로그램의 예를 계속해서 설명합니다.
-
-다음 섹션에서는 이러한 모든 어려운 작업에 대한 성능을 향상시키기 위한 훨씬 더 발전된 신속한 엔지니어링 개념과 기술을 다룰 것입니다.
+<!-- 
 
 ![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled%2010.png)
 
