--- a/_posts/PE/2023-07-28-프롬프트엔지니어링4.md
+++ b/_posts/PE/2023-07-28-프롬프트엔지니어링4.md
@@ -11,7 +11,7 @@ comments: true
 
 이전 섹션에서는 LLM을 확인하는 방법에 대한 기본적인 예를 소개했습니다.
 
-이번 섹션에서는 프롬프트를 사용하여 다양한 작%208업을 수행하고 그 과정에서 주요 개념을 소개하는 방법에 대한 더 많은 예를 제공합니다. 아래의 몇 가지 예는 잘 만들어진 프롬프트를 사용하여 다양한 유형의 작업을 수행하는 방법을 보여줍니다.
+이번 섹션에서는 프롬프트를 사용하여 다양한 작업을 수행하고 그 과정에서 주요 개념을 소개하는 방법에 대한 더 많은 예를 제공합니다. 아래의 몇 가지 예는 잘 만들어진 프롬프트를 사용하여 다양한 유형의 작업을 수행하는 방법을 보여줍니다.
 
 ### 텍스트 요약 (Text Summarization)
 
@@ -34,7 +34,7 @@ comments: true
 정릉은 조선 왕조의 묘역으로, 왕의 묘와 그 왕비들의 묘가 함께 있습니다. 조선 왕은 죽은 후 태자의 위치에서 순서대로 묘를 지어주었는데, 이를 성혼이라고 합니다. 성혼은 궁궐과 비슷한 형태로 건축되었으며, 고려 시대의 왕릉 양식을 따라 만들어졌습니다. 성혼은 물과 산에 좋은 위치에 지어졌으며, 물이 언제나 흐르고 향기롭고 아름다운 경치를 자랑합니다.(생략)
 ```
 
-"답변:" 는 질문 답변에 사용하는 명시적인 프롬프트 형식입니다.여기서 이 정보를 사용하여 모델에게 추가로 예상되는 답이 있음을 알렸습니다. 이 예에서는 사용하지 않는 것과 사용하지 않는 것이 어떤 차이가 있는지 명확하지 않지만, 나중에 나올 예시에서는 큰 차이를 느낄 수 있습니다. 
+프롬프트에 들어간 "답변:" 는 질문 답변에 사용하는 명시적인 프롬프트 형식입니다. 여기서 이 정보를 사용하여 모델에게 추가로 예상되는 답이 있음을 알렸습니다. 이 예에서는 사용하지 않는 것과 사용하지 않는 것이 어떤 차이가 있는지 명확하지 않지만, 나중에 나올 예시에서는 큰 차이를 느낄 수 있습니다. 
 
 gpt의 답변이 너무 많은 정보라고 가정하고 더 요약하려고 합니다. 실제로 모델에게 다음과 같이 한 문장으로 요약하도록 지시할 수 있습니다.
 
@@ -64,7 +64,7 @@ chat gpt에서는 유저와 주고받은 대화 내용을 기억하기 때문에
 
 ---
 
-### **정보 추출**
+### 정보 추출 (Information Extraction)
 
 언어 모델은 자연어 생성 및 관련 작업을 수행하도록 훈련되었지만 분류 및 다양한 자연어 처리(NLP) 작업을 수행할 수도 있습니다.
 
@@ -96,7 +96,7 @@ chat gpt에서는 유저와 주고받은 대화 내용을 기억하기 때문에
 
 ---
 
-### **질문 답변**
+### 질문 답변 (Question Answering)
 
 모델이 특정 답변에 응답하도록 하는 가장 좋은 방법 중 하나는 프롬프트 형식을 개선하는 것입니다. 앞에서 설명한 것처럼 프롬프트는 지침, 컨텍스트, 입력 및 출력 표시기를 결합하여 향상된 결과를 얻을 수 있습니다. 이러한 구성 요소가 꼭 필요하지는 않지만 지침을 구체화 할수록 더 좋은 결과를 얻을 수 있기 때문에 좋은 방법이 됩니다. 다음은 좀 더 체계적인 프롬프트를 실행 했을 때의 모습을 보여주는 예입니다.
 
@@ -116,23 +116,21 @@ Mice.
 ```
 
 
-한국어로도 프롬프트를 구성할 수 있습니다.
+갑분영어
 
 ---
 
-### **텍스트 분류**
+### 텍스트 분류 (Text Classification)
 
-지금까지 간단한 지침을 사용하여 작업을 수행했는데요, 우리는 프롬프트 엔지니어로서 더 나은 지침을 제공하는 것을 더 잘 할 필요가 있습니다. 또한 더 어려운 사용 사례의 경우 지침만 제공해도 충분하지 않다는 것을 알게 될 것입니다. 여기서 상황과 프롬프트에서 사용할 수 있는 다양한 요소에 대해 더 많이 생각해야 합니다. 제공할 수 있는 기타 요소는 다음과 같습니다.`input data`또는`examples`.
-
-텍스트 분류 예제를 제공하여 이를 시연해 보겠습니다.
+지금까지 간단한 지침을 사용하여 작업을 수행했는데요, 우리는 프롬프트 엔지니어로서 더 나은 지침을 제공하는 것을 더 잘 할 필요가 있습니다. 또한 더 어려운 사용 사례의 경우 지침만 제공해도 충분하지 않다는 것을 알게 될 것입니다. 그 때는 상황과 프롬프트에서 사용할 수 있는 다양한 요소에 대해 더 많이 생각해야 합니다. `input data`또는`examples`을 제공해서 시연해보겠습니다.
 
 ![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled%208.png)
 
-당신은 텍스트를 분류하라는 지침을 내렸고 모델은 다음과 같이 응답했습니다. 생각했던 답이 `'중립'` 이 맞나요? `'중립'` 또한 충분히 맞는 답입니다. 하지만 당신이 `'긍정'` 의 감정이 나타나길 원했다면 어떻게 이를 달성할 수 있을까요? 이렇게 하는 데는 여러 가지 방법이 있습니다. 여기서는 특수성에 관심이 있으므로 프롬프트에 더 많은 정보를 제공할수록 더 좋은 결과를 얻을 수 있습니다.예제를 제공하여 올바른 동작을 지정할 수 있습니다. 다시 시도해 보겠습니다.
+당신은 텍스트를 분류하라는 지침을 내렸고 모델은 다음과 같이 응답했습니다. 생각했던 답이 `'중립'` 이 맞나요? `'중립'` 또한 충분히 맞는 답입니다. 하지만 당신이 `'긍정'` 의 감정이 나타나길 원했다면 어떻게 이를 달성할 수 있을까요? 이렇게 하는 데는 여러 가지 방법이 있습니다. 여기서는 특수성에 관심이 있으므로 프롬프트에 더 많은 정보를 제공할수록 더 좋은 결과를 얻을 수 있습니다. 예제를 제공하여 올바른 동작을 지정할 수 있습니다. 다시 시도해 보겠습니다.
 
 ![Untitled](/assets/img/About%20Prompt%20Engineering/Untitled%209.png)
 
-좋습니다. 제가 찾고 있던 특정 라벨입니다. 프롬프트에 제공된 예제는 모델의 출력을 구체화하는 데 도움이 된 것으로 보입니다.
+같은 질문이었지만 답변이 달라졌습니다. 프롬프트에 제공된 예제는 모델의 출력을 구체화하는 데 도움이 된 것으로 보입니다.
 
 사실 모델은 `'중립'` 의 레이블에 있어서 약간의 편견을 가지고 있습니다.
 
@@ -144,7 +142,7 @@ Mice.
 
 ---
 
-### **대화**
+### 대화 (Conversation)
 
 프롬프트 엔지니어링을 통해 달성할 수 있는 더 흥미로운 것 중 하나는 LLM 시스템에 동작 방법, 의도 및 정체성을 지시하는 것입니다. 이것은 고객 서비스 챗봇과 같은 대화형 시스템을 구축할 때 특히 유용합니다.
 
@@ -192,14 +190,13 @@ AI:
 블랙홀은 우주에 있는 여러 현상들을 이해하는데 중요한 역할을 합니다. 하지만 우리에게는 아직 많은 미스터리가 남아있는 분야이기도 합니다. 우주에 대한 더 많은 연구와 관찰을 통해서 블랙홀에 대해 더 많은 것을 알아가고 있습니다.
 ```
 
-진전이 좀 있었습니다. 예제를 더 추가하면 훨씬 더 좋은 결과를 얻을 수 있습니다.
+진전이 좀 있었습니다. 이런 식으로 예제를 더 추가하면 훨씬 더 좋은 결과를 얻을 수 있습니다.
 
 ---
 
-### **코드 생성**
+### 코드 생성 (Code Generation)
 
-생성형 ai의 꽃이라고 볼 수 있는 코드 생성입니다. 코드생성은 
-프롬프트를 통해 수행할 수 있는 코드 생성은 매우 많습니다. 
+생성형 ai의 꽃이라고 볼 수 있는 코드 생성입니다. Copilot과 [Code Interpreter](https://junho1224.github.io/pe/2023-07-25-%EC%BD%94%EB%93%9C%EC%9D%B8%ED%84%B0%ED%94%84%EB%A6%AC%ED%84%B0/)가 아주 좋은 예시이죠, 프롬프트를 통해 수행할 수 있는 코드 생성은 매우 방대합니다.
 
 먼저 사용자에게 인사하는 간단한 프로그램을 시도해 보겠습니다.
 
@@ -213,7 +210,7 @@ AI:
 
 *출력:*
 
-```html
+```
 <!DOCTYPE html>
 <html>
 <head>
@@ -254,12 +251,14 @@ FROM students s
 JOIN departments d ON s.DepartmentId = d.DepartmentId
 WHERE d.DepartmentName = 'Computer Science';
 ```
+위의 경우 데이터베이스 스키마에 대한 데이터를 제공하고 유효한 MySQL 쿼리를 생성하도록 요청했습니다.
 
-이것은 매우 인상적입니다.이 경우 데이터베이스 스키마에 대한 데이터를 제공하고 유효한 MySQL 쿼리를 생성하도록 요청했습니다.
+아주 기초적인 코드 생성이었지만 문제없이 코드를 출력해냈습니다.
+더 복잡한 코드라도 프롬프트를 잘 설계한다면 수준급의 코드를 얻으실 수 있습니다.
 
 ---
 
-### **추리**
+### Reasoning
 
 오늘날 LLM에게 가장 어려운 작업 중 하나는 어떤 형태로든 추론이 필요한 작업입니다. 추론은 LLM에서 나타날 수 있는 복잡한 응용 프로그램의 유형으로 인해 가장 흥미로운 분야 중 하나입니다.
 
