--- a/_posts/PE/2023-08-10-프롬프트엔지니어링6.md
+++ b/_posts/PE/2023-08-10-프롬프트엔지니어링6.md
@@ -64,7 +64,7 @@ Auto-CoT는 다음 두 가지 주요 단계로 구성됩니다:
 
 1단계: 질문 클러스터링: 주어진 데이터 세트의 질문을 몇 개의 클러스터로 분할
 
-2단계: 시연 샘플링: 각 클러스
+2단계: 시연 샘플링: 각 클러스터에서 대표 질문을 선택하고 간단한 휴리스틱이 포함된 Zero-Shot-CoT를 사용하여 추론 체인을 생성
 
 프로세스는 아래와 같이 구성됩니다.
 
